--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   },
   "plugins": ["react", "prettier", "import"],
   "rules": {
+    "no-unused-vars": "off",
     "indent": ["off", "tab"],
     "prettier/prettier": [
       "error",
